# SIR_Projet_S15

./: .gitignore  README.md
ROS/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ROS/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ROS/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
ROS/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  (+1 more)
ROS/ros-mq/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ROS/ros-mq/src/: selector.cpp
ROS/src/ros-mq/: CMakeLists.txt  package.xml
ROS/src/ros-mq/src/: cam2pcl.cpp  selector.cpp
src/mcqueen/: CMakeLists.txt  Doxyfile
src/mcqueen/doc/html/: annotated.html  classes.html  classmq_1_1Mcqueen-members.html  classmq_1_1Mcqueen.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  index.html  library_8cpp.html  library_8hpp.html  library_8hpp_source.html  menudata.js  namespacemq.html  namespaces.html
src/mcqueen/doc/latex/: annotated.tex  classmq_1_1Mcqueen.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  library_8cpp.tex  library_8hpp.tex  namespacemq.tex  namespaces.tex  refman.tex
src/mcqueen/examples/: CMakeLists.txt  example1.cpp
src/mcqueen/src/: CMakeLists.txt  iterable_trait.hpp  library.hpp  mcqueen.cpp  mcqueen.hpp
src/mcqueen_cv/: CMakeLists.txt
src/mcqueen_cv/examples/: CMakeLists.txt
src/mcqueen_cv/src/: CMakeLists.txt  color_selector.cpp  mcqueen_cv.cpp  mcqueen_cv.hpp
(+21 files in other folders)
